finished the atomic blog and done the location in the worldwise application

--- a/worldwise/jsconfig.json
+++ b/worldwise/jsconfig.json
@@ -3,7 +3,9 @@
     "baseUrl": "src",
     "paths": {
       "@components/*": ["components/*"],
-      "@screens/*": ["screens/*"]
+      "@screens/*": ["screens/*"],
+      "@contexts/*": ["contexts/*"],
+      "@hooks/*": ["hooks/*"]
     }
   }
 }
