--- a/worldwise/package.json
+++ b/worldwise/package.json
@@ -14,6 +14,7 @@
     "json-server": "^1.0.0-beta.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.26.0"
