--- a/coding-challenges/fake-store/package.json
+++ b/coding-challenges/fake-store/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/cli": "^3.3.0",
+    "@chakra-ui/react": "^3.3.0",
+    "@emotion/react": "^11.14.0",
     "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "ajv": "^8.8.2",
     "axios": "^1.7.9",
     "react": "^19.0.0",
@@ -16,6 +20,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
+    "snippet": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
