--- a/coding-challenges/fake-store/package.json
+++ b/coding-challenges/fake-store/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/cli": "^3.3.0",
-    "@chakra-ui/react": "^3.3.0",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,8 +14,10 @@
     "add": "^2.0.6",
     "ajv": "^8.8.2",
     "axios": "^1.7.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^11.17.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
