--- a/coding-challenges/fake-store/package.json
+++ b/coding-challenges/fake-store/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/cli": "^3.3.0",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme": "^3.4.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@redux-devtools/extension": "^3.3.0",
@@ -15,6 +16,7 @@
     "ajv": "^8.8.2",
     "axios": "^1.7.9",
     "framer-motion": "^11.17.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
