--- a/fast-pizza/jsconfig.json
+++ b/fast-pizza/jsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@components/*": ["components/*"]
+      "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"],
+      "@services/*": ["services/*"],
+      "@features/*": ["features/*"]
     }
   }
 }
