--- a/the-wild-oasis/jsconfig.json
+++ b/the-wild-oasis/jsconfig.json
@@ -4,11 +4,12 @@
     "paths": {
       "@utils/*": ["utils/*"],
       "@data/*": ["data/*"],
-      "@features": ["features/*"],
-      "@hooks": ["hooks/*"],
-      "@ui": ["ui/*"],
-      "@services": ["services/*"],
-      "@pages": ["pages/*"]
+      "@features/*": ["features/*"],
+      "@hooks/*": ["hooks/*"],
+      "@ui/*": ["ui/*"],
+      "@services/*": ["services/*"],
+      "@pages/*": ["pages/*"],
+      "@styles/*": ["styles/*"]
     }
   }
 }
