--- a/store/client/jsconfig.json
+++ b/store/client/jsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "@components/features/*": ["components/features/*"],
+      "@components/ui/*": ["components/ui/*"]
+    }
   }
 }
