--- a/the-wild-oasis/jsconfig.json
+++ b/the-wild-oasis/jsconfig.json
@@ -5,7 +5,8 @@
       "@features/*": ["features/*"],
       "@hooks/*": ["hooks/*"],
       "@services/*": ["services/*"],
-      "@ui/*": ["@ui/*"]
+      "@ui/*": ["@ui/*"],
+      "@pages/*": ["@pages/*"]
     }
   }
 }
